--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
 
 <table class="name">
     <tr>
-        <td width="160px">
-        <img width="160px" src="figures/a.png" border="0">
+        <td width="150px">
+        <img width="150px" src="figures/a2.jpg" border="0">
         </td>
+					<td></td>
         <td>
 		<p class="h0"><b>Alexander Panchenko</b></p>
 		<p><b>Natural Language Processing</b></p>
